auto-test/tests/chapter_13/invalid_types/extra_credit/compound_mod.c

int main(void) {
    double d = 5.0;
    d %= 2;
    return (int) d;
}